--- a/conf/modules.config
+++ b/conf/modules.config
@@ -326,7 +326,7 @@ if (!params.skip_alignment) {
                     path: { "${params.outdir}/minimap2" },
                     mode: 'copy',
                     enabled: true,
-                    pattern: "*{'.sorted.bam','*.bai'}",
+                    pattern: "*.{sorted.bam,sorted.bam.bai}",
                     saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
                 ]
             }
